--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -190,6 +190,7 @@
     <Compile Include="ResultModel\WaterFastness_Result.cs" />
     <Compile Include="ViewModel\BACriteria_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\Accessory_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\AgingHydrolysisTest_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\FabricColorFastness_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_Apperance_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_FGPT_ViewModel.cs" />
