ISP20230157 - 新增Accelerated Aging by Hydrolysis 功能

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -973,6 +973,9 @@
     <Content Include="XLT\DailyMoisture.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="XLT\AgingHydrolysisTest.xltx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
