ISP20230251 - 原本好好的Transaction寫法掛了，換一個方式進行，另外架上組態設定

--- a/Quality/Quality/Web.Debug.config
+++ b/Quality/Quality/Web.Debug.config
@@ -28,4 +28,8 @@
       </customErrors>
 -->
   </system.web>
+  <appSettings>
+    <add key="IsTest" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="TestMailReceiver" value="benson.chung@sportscity.com.tw;willy.wei@sportscity.com.tw;jack.hsu@sportscity.com.tw;jeff.yeh@sportscity.com.tw;jimmy.liao@sportscity.com.tw" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+  </appSettings>
 </configuration>
