--- a/Quality/Quality/Web.Debug.config
+++ b/Quality/Quality/Web.Debug.config
@@ -30,6 +30,6 @@
   </system.web>
   <appSettings>
     <add key="IsTest" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="TestMailReceiver" value="benson.chung@sportscity.com.tw;willy.wei@sportscity.com.tw;jack.hsu@sportscity.com.tw;jeff.yeh@sportscity.com.tw;jimmy.liao@sportscity.com.tw" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="TestMailReceiver" value="benson.chung@sportscity.com.tw;lillia.huang@sportscity.com.tw" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 </configuration>
