ISP20230273 - 調整發布參數

--- a/Quality/Quality/Web.Release.config
+++ b/Quality/Quality/Web.Release.config
@@ -30,7 +30,7 @@
 -->
   </system.web>
   <appSettings>
-    <add key="IsTest" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="IsTest" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="TestMailReceiver" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 </configuration>
