--- a/Quality/Quality/Web.Debug.config
+++ b/Quality/Quality/Web.Debug.config
@@ -29,7 +29,7 @@
 -->
   </system.web>
   <appSettings>
-    <add key="IsTest" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="IsTest" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="TestMailReceiver" value="benson.chung@sportscity.com.tw;lillia.huang@sportscity.com.tw" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 </configuration>
