--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Areas\BulkFGT\Controllers\MockupCrockingController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\MockupOvenTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\MockupWashController.cs" />
+    <Compile Include="Areas\BulkFGT\Controllers\PhenolicYellowTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\PullingTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\SearchListController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\PerspirationFastnessController.cs" />
@@ -444,6 +445,7 @@
     <Content Include="Areas\BulkFGT\Views\DailyMoisture\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\AgingHydrolysisTest\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\AgingHydrolysisTest\Detail.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\PhenolicYellowTest\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -977,6 +979,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="XLT\PullingTest.xltx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\PublicWondow\FabricRefNoList.cshtml" />
+    <Content Include="Views\PublicWondow\RollDyelotList.cshtml" />
+    <Content Include="XLT\PhenolicYellowTest.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
