--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Service\BulkFGT\MockupWashService.cs" />
     <Compile Include="Service\BulkFGT\MockupCrockingService.cs" />
     <Compile Include="Service\BulkFGT\PullingTestService.cs" />
+    <Compile Include="Service\BulkFGT\SalivaFastnessTestService.cs" />
     <Compile Include="Service\BulkFGT\SearchListService.cs" />
     <Compile Include="Service\BulkFGT\PerspirationFastnessService.cs" />
     <Compile Include="Service\BulkFGT\WaterFastnessService.cs" />
