--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -149,13 +149,14 @@
     <add key="mailAccount" value="foxpro" />
     <add key="mailPwd" value="orpxof" />
     <add key="OnlineHelpURL" value="http://onlinehelp.sportscity.com.tw:8062/?OnLineHelpID=Quality." />
+    <add key="UplodaFileRootPath" value="D:\website\Quality_Formal\UploadFile\" />
   </appSettings>
 
 
   <system.web.extensions>
     <scripting>
       <webServices>
-        <jsonSerialization maxJsonLength="2147483647"/>
+        <jsonSerialization maxJsonLength="2147483647" />
       </webServices>
     </scripting>
   </system.web.extensions>
@@ -169,7 +170,7 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="1024000"/>
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="1024000" />
     <sessionState timeout="66"></sessionState>
   </system.web>
   <runtime>
