--- a/Quality/BusinessLogicLayer/packages.config
+++ b/Quality/BusinessLogicLayer/packages.config
@@ -1,9 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net461" />
+  <package id="DotNetZip" version="1.16.0" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.32.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.32.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.32.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.32.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.32.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net461" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
