--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -204,6 +204,7 @@
     <Compile Include="ViewModel\BulkFGT\MockupOven_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\MockupWash_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\PullingTest_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\MartindalePillingTest_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\SalivaFastnessTest_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\SearchList_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\TPeelStrengthTest_ViewModel.cs" />
