--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Areas\BulkFGT\Controllers\MockupWashController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\PhenolicYellowTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\PullingTestController.cs" />
+    <Compile Include="Areas\BulkFGT\Controllers\MartindalePillingTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\SalivaFastnessTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\SearchListController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\PerspirationFastnessController.cs" />
@@ -455,6 +456,7 @@
     <Content Include="Areas\BulkFGT\Views\PhenolicYellowTest\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\TPeelStrengthTest\Index.cshtml" />
     <Content Include="Areas\SampleRFT\Views\InspBySPQuery\SendMailer.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\MartindalePillingTest\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -1000,6 +1002,11 @@
     <Content Include="XLT\TPeelStrengthTest.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="XLT\MartindalePillingTest.xltx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\PublicWondow\MartindalePillingTestPictureList.cshtml" />
+    <Content Include="Views\Shared\ScreenShot_MartindalePillingTest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
