--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Areas\BulkFGT\Controllers\FabricOvenTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\GarmentTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\HeatTransferWashController.cs" />
+    <Compile Include="Areas\BulkFGT\Controllers\RandomTumblePillingTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\MockupCrockingController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\MockupOvenTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\MockupWashController.cs" />
@@ -457,6 +458,7 @@
     <Content Include="Areas\BulkFGT\Views\TPeelStrengthTest\Index.cshtml" />
     <Content Include="Areas\SampleRFT\Views\InspBySPQuery\SendMailer.cshtml" />
     <Content Include="Areas\BulkFGT\Views\MartindalePillingTest\Index.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\RandomTumblePillingTest\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
