--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Provider\MSSQL\SalivaFastnessTestProvider.cs" />
     <Compile Include="Provider\MSSQL\SearchListProvider.cs" />
     <Compile Include="Provider\MSSQL\TPeelStrengthTestProvider.cs" />
+    <Compile Include="Provider\MSSQL\WickingHeightTestProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ADOHelper\ADOHelper.csproj">
