--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Interface\IRFTPicDuringDummyFittingProvider.cs" />
     <Compile Include="Interface\ISearchListProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provider\MSSQL\HydrostaticPressureWaterproofTestProvider.cs" />
     <Compile Include="Provider\MSSQL\PhenolicYellowTestProvider.cs" />
     <Compile Include="Provider\MSSQL\AgingHydrolysisTest_Provider.cs" />
     <Compile Include="Provider\MSSQL\DailyMoistureProvider.cs" />
