--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Provider\MSSQL\MartindalePillingTestProvider.cs" />
     <Compile Include="Provider\MSSQL\SalivaFastnessTestProvider.cs" />
     <Compile Include="Provider\MSSQL\SearchListProvider.cs" />
+    <Compile Include="Provider\MSSQL\StickerTestProvider.cs" />
     <Compile Include="Provider\MSSQL\TPeelStrengthTestProvider.cs" />
   </ItemGroup>
   <ItemGroup>
