--- a/Quality/BusinessLogicLayerTests1/App.config
+++ b/Quality/BusinessLogicLayerTests1/App.config
@@ -138,7 +138,7 @@
     <add key="SmtpPort" value="25" />
     <add key="mailAccount" value="foxpro" />
     <add key="mailPwd" value="orpxof" />
-    <add key="OnlineHelpURL" value="http://onlinehelp.sportscity.com.tw:8062/?OnLineHelpID=Quality." />
+    <add key="OnlineHelpURL" value="https://onlinehelp.sportscity.com.tw:8062/?OnLineHelpID=Quality." />
   </appSettings>
   <!--
     如需 web.config 變更的說明，請參閱 http://go.microsoft.com/fwlink/?LinkId=235367。
