--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -148,7 +148,7 @@
     <add key="SmtpPort" value="25" />
     <add key="mailAccount" value="foxpro" />
     <add key="mailPwd" value="orpxof" />
-    <add key="OnlineHelpURL" value="http://onlinehelp.sportscity.com.tw:8062/?OnLineHelpID=Quality." />
+    <add key="OnlineHelpURL" value="https://onlinehelp.sportscity.com.tw:8062/?OnLineHelpID=Quality." />
     <add key="UplodaFileRootPath" value="D:\website\Quality_Formal\UploadFile\" />
   </appSettings>
 
