--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -185,7 +185,7 @@
     <Compile Include="Areas\BulkFGT\BulkFGTAreaRegistration.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\AccessoryOvenWashController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\AgingHydrolysisTestController.cs" />
-    <Compile Include="Areas\BulkFGT\Controllers\BrandGarmentTesController.cs" />
+    <Compile Include="Areas\BulkFGT\Controllers\BrandBulkTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\BulkFGTMailGroupController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\DailyMoistureController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\FabricColorFastnessController.cs" />
@@ -470,8 +470,8 @@
     <Content Include="Areas\BulkFGT\Views\WaterAbsorbency\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\WickingHeightTest\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\EvaporationRateTest\Index.cshtml" />
-    <Content Include="Areas\BulkFGT\Views\BrandGarmentTest\Index.cshtml" />
-    <Content Include="Areas\BulkFGT\Views\BrandGarmentTest\Detail.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\BrandBulkTest\Index.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\BrandBulkTest\Detail.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -1053,7 +1053,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Authority\Data\" />
     <Folder Include="Areas\BulkFGT\Data\" />
-    <Folder Include="Areas\BulkFGT\Views\BrandGarmentTes\" />
     <Folder Include="Areas\FinalInspection\Models\" />
     <Folder Include="Areas\SampleRFT\Data\" />
     <Folder Include="Areas\StyleManagement\Models\" />
