ISP20231196 - 1. Table，變更名稱，BrandGarmentTest > BrandBulkTest 、BrandGarmentTestItem > BrandBulkTestItem、BrandGarmentTestDox > BrandBulkTestDox 2.新增欄位

--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -97,7 +97,7 @@
     <Compile Include="Interface\IRFTPicDuringDummyFittingProvider.cs" />
     <Compile Include="Interface\ISearchListProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Provider\MSSQL\BrandGarmentTest_Provider.cs" />
+    <Compile Include="Provider\MSSQL\BrandBulkTestProvider.cs" />
     <Compile Include="Provider\MSSQL\HydrostaticPressureWaterproofTestProvider.cs" />
     <Compile Include="Provider\MSSQL\RandomTumblePillingTestProvider.cs" />
     <Compile Include="Provider\MSSQL\PhenolicYellowTestProvider.cs" />
