--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -95,6 +95,9 @@
     <Compile Include="ManufacturingExecutionDB\RFT_OrderComments.cs" />
     <Compile Include="ManufacturingExecutionDB\RFT_PicDuringDummyFitting.cs" />
     <Compile Include="ProductionDB\AcceptableQualityLevels.cs" />
+    <Compile Include="ProductionDB\AcceptableQualityLevelsPro.cs" />
+    <Compile Include="ProductionDB\AcceptableQualityLevelsPro_DefectCategory.cs" />
+    <Compile Include="ProductionDB\AcceptableQualityLevelsPro_Detail.cs" />
     <Compile Include="ProductionDB\Adidas_FGWT.cs" />
     <Compile Include="ProductionDB\Brand.cs" />
     <Compile Include="ProductionDB\ColorFastness.cs" />
