ISP20240196 - Fabric Crocking & Shrinkage Test 功能調整

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -1057,6 +1057,7 @@
     <Content Include="Views\PublicWindow\MulitipleFabricRefNoList.cshtml" />
     <Content Include="Views\PublicWindow\FinalInspectionCFAList.cshtml" />
     <Content Include="Views\PublicWindow\AllReceivingDetailList.cshtml" />
+    <Content Include="Views\PublicWindow\FabricCrockingPictureList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
