ISP20240517 新增參數[IsFromERP](預設false) 用來判斷是否是從ERP(MES or PMS)觸發的

--- a/Quality/BusinessLogicLayerTests1/App.config
+++ b/Quality/BusinessLogicLayerTests1/App.config
@@ -129,7 +129,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="IsTest" value="false" />
+    <add key="IsTest" value="true" />
     <add key="TestMailReceiver" value="benson.chung@sportscity.com.tw;willy.wei@sportscity.com.tw;jack.hsu@sportscity.com.tw;jeff.yeh@sportscity.com.tw;jimmy.liao@sportscity.com.tw" />
     <!--解碼用-->
     <add key="CryptoKey" value="scimis" />
