--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\MSSQL\BrandBulkTestProvider.cs" />
     <Compile Include="Provider\MSSQL\HydrostaticPressureWaterproofTestProvider.cs" />
+    <Compile Include="Provider\MSSQL\QualityBrandTestCodeProvider.cs" />
     <Compile Include="Provider\MSSQL\RandomTumblePillingTestProvider.cs" />
     <Compile Include="Provider\MSSQL\PhenolicYellowTestProvider.cs" />
     <Compile Include="Provider\MSSQL\AgingHydrolysisTest_Provider.cs" />
