ISP20241252 - 改寫報表產生方式

--- a/Quality/ToolKit/ToolKit.csproj
+++ b/Quality/ToolKit/ToolKit.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataRowExtensions.cs" />
     <Compile Include="HttpHelpers.cs" />
     <Compile Include="JsonHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
